--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,22 @@
-body{
-  color:#222; 
+*{
+  box-sizing: border-box;
 }
 
-img{
+body {
+  color: #222;
+}
+
+img {
   max-width: 100%;
 }
 
 main {
-  padding:10px;
+  padding: 10px;
   max-width: 700px;
   margin: 0 auto;
 }
 
-
-header{
+header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
@@ -21,17 +24,17 @@ header{
   align-items: center;
 }
 
-header a{
+header a {
   text-decoration: none;
   color: inherit;
 }
 
-header a.logo{
+header a.logo {
   font-weight: bold;
   font-size: 1.5rem;
 }
 
-header nav{
+header nav {
   display: flex;
   gap: 15px;
 }
@@ -43,13 +46,13 @@ div .post {
   margin-bottom: 30px;
 }
 
-div.post div.texts h2{
+div.post div.texts h2 {
   margin: 0;
   font-size: 1.8rem;
 }
 
-div.post p.info{
-  margin:6px 0;
+div.post p.info {
+  margin: 6px 0;
   color: #888;
   font-size: 0.7rem;
   font-weight: bold;
@@ -57,11 +60,37 @@ div.post p.info{
   gap: 10px;
 }
 
-div.post p.info a.author{
-  color:#333 ;
+div.post p.info a.author {
+  color: #333;
 }
 
-div.post p.summary{
+div.post p.summary {
   margin: 10px 0;
   line-height: 1.4rem;
+}
+
+form.login,
+form.register {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+input {
+  display: block;
+  margin-bottom: 7px;
+  width: 100%;
+  padding: 5px;
+  background-color: #fff;
+  border: 1.5px solid #ddd;
+  border-radius: 5px;
+}
+
+button{
+  width: 100%;
+  display: block;
+  background-color: #555;
+  border: 0;
+  color: #fff;
+  border-radius: 5px;
+  padding: 7px 0;
 }
