posting and getting post setup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -94,3 +94,11 @@ button{
   border-radius: 5px;
   padding: 7px 0;
 }
+
+form.login h1, form.register h1{
+  text-align: center;
+}
+
+form.createPost button{
+  margin-top: 10px;
+}
